# gnss_multipath_plugin

./: CMakeLists.txt  README.md  package.xml
PastCodes/: CMakeLists_AE678.txt  multipath_sensor_AE678.cpp
config/: hk_sim.rviz
data/: arms.json  arms_14_03_2023.json  arms_21_03_2023.json  arms_21_03_2023_1.json  arms_gt.json  arms_plugin.json  car_ground_truth.json  mocap.json  pos_data_log.json  purdue.json  video.py
data/bckup/: hk_data_affect_pos.json  hk_data_heatmap.json  hk_nominal_traj.csv
include/: satellites.hpp
include/gnss_multipath_plugin/: multipath_sensor.hpp
install/: local_setup.sh  setup.sh
install/multipath_sim/include/multipath_sim/: multipath_sensor.hpp  sphere_model_plugin.hpp
install/multipath_sim/include/multipath_sim/msg/: multipath_offset.h
install/multipath_sim/include/multipath_sim/msg/detail/: multipath_offset__functions.c  multipath_offset__rosidl_typesupport_fastrtps_c.h  multipath_offset__rosidl_typesupport_introspection_c.h  multipath_offset__struct.h  multipath_offset__struct.hpp  multipath_offset__traits.hpp  multipath_offset__type_support.h
install/multipath_sim/lib/data/: hk_attack_traj.csv  hk_data_affect_pos_heatmap.json  hksc135c.21n
install/multipath_sim/lib/multipath_sim/: broadcast_pos.py  broadcast_pos_heatmap.py  set_model_state.py
install/multipath_sim/share/ament_index/resource_index/parent_prefix_path/: multipath_sim
install/multipath_sim/share/multipath_sim/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/multipath_sim/share/multipath_sim/cmake/: multipath_sim__rosidl_generator_cExport-noconfig.cmake  multipath_sim__rosidl_generator_cppExport.cmake  multipath_sim__rosidl_typesupport_cppExport-noconfig.cmake  multipath_sim__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/multipath_sim/share/multipath_sim/launch/: test.launch.py
install/multipath_sim/share/multipath_sim/models/x500/: model.sdf
install/multipath_sim/share/multipath_sim/models/x500_red_no_collision/: model.sdf
install/multipath_sim/share/multipath_sim/worlds/: hong_kong.world  video_gz_hk.world
launch/: abu_dhabi.launch.py  hong_kong.launch  hong_kong.launch.py  multipath.launch.py  purdue.launch.py
log/: latest_build
models/purdue/: model.config  purdue.sdf
models/purdue/media/: buildings.dae  terrain.dae  terrrain.dae
models/purdue_airport/: model.config  purdue.sdf
models/purdue_airport/media/: buildings.dae  terrain.dae
models/purdue_airport/media_/: buildings.dae  terrain.dae
models/x500_green/: model.sdf
msg/: GNSSMultipathFix.msg
scripts/: broadcast_pos.py  data_compare.py  generate_heatmap.py  gnss_logging.py  gps.tle  gps_conv.py  plot_heatmap.py  plot_nmea_urbannav.py  satellite_angle.py  set_model_state.py  set_model_state_heatmap.py  set_model_state_hk.py  set_model_state_multipath.py  set_model_state_purdue.py  set_model_state_purdue_withMocap.py  stream_skycam.py  test.py  ublox_data_processing.py
scripts/backup/: calcDOP.py  dataset.eps  heatmap_viz.py  hk_data_analysis.py  noise_viz.py  plugin.eps  random_walk.py
scripts/backup/multipath_sim/: coord.py  kalman_filter.py  trialteration.py
scripts/backup/multipath_sim/laika/: downloader.py
scripts/backup/ros1/: multipath_error_relay.py
scripts/backup/ros1/multipath_plugin/: coord.py
scripts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
scripts/log/: latest_build
scripts/ros1/: nmea_conv.py  record_affected_pos.py  record_heat_map.py  set_model_state_heatmap.py
scripts/ros1/multipath_plugin/: sat_pos.py
src/: multipath_sensor.cpp  sphere_model_plugin.cpp
worlds/: abu_dhabi.world  hong_kong.world  multipath.world  purdue.world  purdue_second.world  test.world
